--- a/public/sass/_component.scss
+++ b/public/sass/_component.scss
@@ -194,6 +194,9 @@
 				background-color: var(--color-secondary);
 			}
 		}	
+		&--edit-settings{
+			margin-right: 1rem;
+		}
 	}
 }
 
@@ -222,13 +225,14 @@
 ////////////////////////////
 .search-bar {
 	font-size: 1.4rem;
+	font-weight: 600;
     height: 7rem;
 	border-bottom: 1px solid var(--color-grey-light-4);
     display: flex;
     justify-content: space-between;
     align-items: center;
     color: var(--color-grey-dark-1);
-
+    margin-bottom: 1rem;
 	&__form {
 	    flex: 0 0 20%;
 	    display: flex;
@@ -326,15 +330,16 @@
 ////////////////////////////
 //////////////******************SEARCH RESULTS*****************//////////////////////
 ////////////////////////////
-.search-result-container{
+.search-result{
 	display: grid;
-	grid-template-columns: repeat(11, auto);
+	grid-template-columns: 1.6rem repeat(13, auto);
+	grid-template-rows: repeat(999999999,minmax(3rem, 3rem));
+	grid-row-gap: 2rem;
 	justify-content: space-around;
-	margin-top: 1rem;
-	margin-bottom: 0.4rem;
+	margin-top: 1rem 0 .4rem 0;
 	font-size: 1.6rem;
-	height: 40vh;
-	grid-template-rows: minmax(4rem, 4rem);
+	font-weight: 600;
+	height: 38vh;
 	border-bottom: 1px solid var(--color-grey-light-4);
 	overflow: scroll;
 	-ms-overflow-style: none;  /* IE and Edge */
@@ -342,17 +347,108 @@
 	&::-webkit-scrollbar { // to hide the scrollbar for chrome, safari, and safari
  	 	display: none;
 	}
-	&--larger{
-		height: 59vh;
+	&--sr{
+		height: 32vh;
+		grid-template-columns: 1.6rem repeat(12, auto);
 	}
 	&__labels{
 		color: var(--color-grey-dark-1);
-		margin-bottom: 1rem;
 		border-bottom: 1px solid var(--color-grey-light-4);
 	}
 	&__medicine{
 		font-size: 1.5rem;
-		grid-template-rows: minmax(4rem, 4rem);
+		&--middle{
+			text-align: center;
+		}
+		&--input{
+			font-weight: 600;
+			width: 5rem;
+			height: 2rem;
+			background-color: transparent;
+			outline: none;
+			border: 1px solid var(--color-grey-dark-2);
+			border-radius: 5px;
+			color: var(--color-grey-dark-2);
+			padding: .2rem;
+			&:focus{
+				outline: none;
+			}
+		}
+	}
+	&__icon{
+		width: 2rem;
+		height: 2rem;
+		color: var(--color-grey-dark-1);
+		fill: currentColor;
+		cursor: pointer;
+		margin-left: 1rem;
+		&:active,
+		&:hover{
+			color: var(--color-primary-dark);
+			fill: currentColor;
+		}
+	}
+	&__description{
+		margin-left: 3.5rem;
+		width: 85%;
+		margin-top: .5rem;
+		&--sr{
+			padding: 1rem;
+			border-bottom: 1px solid var(--color-grey-light-4);
+			margin-bottom: 1.5rem;
+		}
+		
+		&__text{
+			text-align: center;
+			font-weight: 600;
+			font-size: 2rem;
+			color: var(--color-grey-dark-1);
+			text-transform: uppercase;
+			margin-bottom: 1rem;
+		}	
+		&__container{
+			display: flex;
+			width: 85vw;
+		}
+		&__details{
+			height: 8vh;
+			border-radius: 50px;
+			cursor: pointer;
+			flex: 0.5;
+			margin: 1rem;
+			position: relative;
+			transition: flex 0.7s ease-in;
+			&__label{
+				font-size: 1.5rem;
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%, -50%);
+				margin: 0;
+				opacity: 1;
+			}
+			&--active{
+				flex: 2;
+				.bill__details__text{
+					opacity: 1;
+					transition: opacity 0.3s ease-in .8s; //0.4 delay
+				}
+				.bill__details__label{
+					opacity: 0;
+						
+					transition: opacity 0.3s ease-in 0.4s; //0.4 delay
+				}
+			}
+			&__text{
+				font-size: 1.4rem;
+				position: absolute;
+				top: 10%;
+				left: 5%;
+				text-transform: lowercase;
+				margin: 0;
+				opacity: 0;
+			}
+		}
 	}
 }
 /*
@@ -387,63 +483,55 @@
 ////////////////////////////
 .bill{
 	font-size: 2rem;
+	margin-top: 1rem;
 	margin-left: 3.5rem;
 	width: 85%;
 	text-transform: uppercase;
 	color: var(--color-grey-dark-1);
-	&__price-bar{
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-	}
-	&__description-text{
-		text-align: center;
-	}
-	&__container{
-		display: flex;
-		width: 85vw;
-	}
-	&__details{
-		height: 8vh;
-		border-radius: 50px;
-		cursor: pointer;
-		flex: 0.5;
-		margin: 1rem;
-		position: relative;
-		transition: flex 0.7s ease-in;
-		&__label{
-			font-size: 1.5rem;
-			position: absolute;
-			top: 50%;
-			left: 50%;
-			transform: translate(-50%, -50%);
-			margin: 0;
-			opacity: 1;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	&__group{
+		/* Chrome, Safari, Edge, Opera */ //HIDING THE ARROW UP AND DOWN OF NUMBER INPUT TYPE
+		input::-webkit-outer-spin-button,
+		input::-webkit-inner-spin-button {
+		  -webkit-appearance: none;
+		  margin: 0;
 		}
-		&--active{
-			flex: 2;
-			.bill__details__text{
-				opacity: 1;
-				transition: opacity 0.3s ease-in .8s; //0.4 delay
-			}
-			.bill__details__label{
-				opacity: 0;
-					
-				transition: opacity 0.3s ease-in 0.4s; //0.4 delay
-			}
+		/* Firefox */
+		input[type=number] {
+		  -moz-appearance: textfield;
 		}
-		&__text{
-			font-size: 1.4rem;
-			position: absolute;
-			top: 10%;
-			left: 5%;
-			text-transform: lowercase;
-			margin: 0;
-			opacity: 0;
+
+		&--first{
+			flex-grow: 0.2;
+		}
+		&--second{
+			flex-grow: 0.8;
+		}
+	}
+	&__title{
+		font-weight: 600;
+		margin-right: .5rem;
+	}
+	&__total-price{
+
+	}
+	&__total-income{
+		width: 13rem;
+		height: 3rem;
+		background-color: transparent;
+		outline: none;
+		border: 1px solid var(--color-grey-dark-1);
+		padding: .5rem 1rem;
+		border-radius: 5px;
+		font-size: 2rem;
+		color: var(--color-grey-dark-1);
+		&:focus{
+			outline: none;
 		}
 	}
 }
-
 
 ////////////////////////////
 //////////////******************ADDING AND EDITING PRODUCT FORM*****************//////////////////////
@@ -496,8 +584,8 @@
 			}
 			&__description{
 				top: 44%;
-				min-height: 9rem;
-				max-height: 9rem;
+				min-height: 7.3rem;
+				max-height: 7.3rem;
 				min-width: 18rem;
 				max-width: 18rem;
 				border-radius: 20px;
@@ -537,11 +625,106 @@
 
 
 ////////////////////////////
+//////////////******************INVENTORY*****************//////////////////////
+////////////////////////////
+.inventory{
+
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	grid-column-gap: 2rem;
+	margin-left: 5rem;
+	padding-top: 1rem; 
+	height: 38rem;
+	&__headers{
+		font-size: 1.8rem;
+		font-weight: 600;
+		text-align: center;
+		color: var(--color-grey-dark-1);
+		margin-bottom: 1rem;
+		text-decoration: underline;
+	}
+	&__bill{
+		font-size: 1.6rem;
+		display: grid;
+		grid-column-gap: 2rem;
+		color: var(--color-grey-dark-1);
+		font-weight: 600;
+		height: 28rem;
+		grid-template-rows: repeat(999999999,minmax(4rem, 4rem));
+		overflow: scroll;
+		-ms-overflow-style: none;  /* IE and Edge */
+	  	scrollbar-width: none;  /* Firefox */
+		&::-webkit-scrollbar { // to hide the scrollbar for chrome, safari, and safari
+	 	 	display: none;
+		}
+		&--income{
+			grid-template-columns: 2rem repeat(4, auto) 4rem;
+		}
+
+		&--expenses{
+			grid-template-columns: 2rem repeat(5, auto) 4rem;
+		}
+
+		&__details{
+			margin-bottom: 1rem;
+			&--info{
+				color: var(--color-grey-dark-2);
+				&__icon{
+					height: 2rem;
+					width: 2rem;
+					cursor: pointer;
+					color: var(--color-grey-dark-1);
+					fill: currentColor;
+					&:focus,
+					&:hover,
+					active {
+						color: var(--color-primary-dark);
+						fill: currentColor;
+					}
+				}
+			}
+			
+		}
+	}
+	&__totals{
+		margin-top: 2rem;
+		display: flex;
+		justify-content: space-between;
+		&__group{
+			font-weight: 600;
+			&:not(:first-child){
+				margin-right: 3rem;
+			}
+		}
+		&__title{
+			font-size: 1.8rem;
+			margin-right: 1rem;
+			color: var(--color-grey-dark-1);
+		}
+		&__details{
+			font-size: 1.8rem;
+		}
+		&--final{
+			justify-content: center;
+		}
+	}
+	&__income{
+		border-right: 1px solid var(--color-grey-light-4);
+	}
+
+	&__expenses{
+		margin-left: 1rem;
+	}
+}
+
+
+////////////////////////////
 //////////////******************GENERAL SETTINGS*****************//////////////////////
 ////////////////////////////
 
 .settings{
-	&__group{
+	font-weight: 600;
+	&__group{ //unused
 		display: flex;
 		justify-content: space-between;
 		width: 118rem;
@@ -561,9 +744,19 @@
 				margin-left: 3rem;
 				margin-top: 12rem;
 			}
+			&--space-between{
+				justify-content: space-between;
+				margin-bottom: 1rem;
+			}
 		}
 		&__label{
-			width: 15rem;
+			width: 16rem;
+			font-weight: 600;
+			&--smaller{
+				width: 10rem;
+			}
+		}
+		&__edit{
 
 		}
 		&__input {
@@ -575,12 +768,18 @@
 			padding: .7rem 2rem;
 			border-radius: 100px;
 			transition: all .5s ease;
-			width: 25rem;
+			width: 24rem;
 			&:focus {
-			 	width: 28rem;
+			 	width: 25rem;
 				outline: none;
 				background-color: var(--color-grey-light-3);
 				box-shadow: 0 0 0 .5px var(--color-primary);
+			}
+			&--smaller{
+				width: 20rem;
+				&:focus {
+			 		width: 22rem;
+			 	}
 			}
 			&__group{
 				display: grid;
@@ -623,15 +822,24 @@
 //////////////******************EDIT INPUTS SETTINGS*****************//////////////////////
 ////////////////////////////
 .edit-inputs{
-	display: grid;
-	grid-template-columns: repeat(5, 1fr);
-	grid-column-gap: 3rem;
-	padding: 2rem 1rem 1rem 5rem;
-
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	&__group{
+		flex: 0.3;
+		margin-top: 1rem;
+	}
+	&__body{
+		display: grid;
+		grid-template-columns: repeat(5, 1fr);
+		grid-column-gap: 3rem;
+		padding: 2rem 1rem 1rem 5rem;
+	}
 	&__column{
 		display: flex;
 		flex-direction: column;
 		&__header{
+			font-weight: 600;
 			font-size: 2rem;
 			text-align: center;
 			color: var(--color-grey-dark-1);
@@ -665,6 +873,13 @@
 
 				&__name{
 					width: 16rem;
+					background-color: transparent;
+					color: var(--color-grey-dark-1);
+					border: none;
+					font-size: 1.6rem;
+					&:focus{
+						outline: none;
+					}
 				}
 				&__buttons{
 					height: 1rem;
@@ -690,6 +905,7 @@
 				color: var(--color-grey-dark-1);
 				margin-right: .4rem;
 				width: 5.9rem;
+				font-weight: 600;
 			}
 			&__input{
 				font-family: inherit;
@@ -737,16 +953,16 @@
 
 .my-account{
 	width: 96.5rem;
-	margin: 0 23rem;
+	margin: 0 25rem;
 	font-weight: 600;
+	margin-top: -5rem;
 	&__header{
 		display: flex;
 		align-items: center;
 		padding: 1rem 0 1rem 0;
 		border-bottom: 1px solid var(--color-shadow-dark);
 		&__user-image{
-			height: 8.5rem;
-			width: 8.5rem;
+			height: 15rem;
 			border-radius: 50%;
 			margin-right: 2rem;
 			border: 1px solid var(--color-primary-dark);
@@ -765,18 +981,35 @@
 			    text-decoration: underline;
 			    display: inline-block;
 			    cursor: pointer;
-
 			    &:focus,
 			    &:hover,
 			    &:active{
 			    	color: var(--color-primary-dark);
+			    	fill: currentColor;
 			    }
+			    &__icon{
+				    width: 1.3rem;
+				    height: 1.3rem;
+				    margin-left: .5rem;
+				}
 			}
+			
 		}
-		&__user-fullname{
+		&__user-details{
 			margin-left: 30rem;
 			font-size: 2rem;
 			color: var(--color-grey-dark-1);
+			display: flex;
+			flex-direction: column;
+
+			&__group{
+				font-weight: 300;
+				margin-bottom: 1rem;
+			}
+			&__info{
+				margin-right: 1.5rem;
+				font-weight: 600;
+			}
 		}
 	}
 
@@ -794,6 +1027,9 @@
 		}
 		&__label{
 			width: 15.5rem;
+
+		}
+		&__edit{
 
 		}
 		&__input {
@@ -824,45 +1060,8 @@
 				box-shadow: 0 0 0 .5px var(--color-primary);
 			}
 		}
-		&__button{
-			margin-left: 1rem;
-			height: 2rem;
-			width: 2rem;
-			&:active,
-			&:hover,
-			&focus{
-				color: var(--color-primary-dark);
-				fill: currentColor;
-			}
-		}
-
 	} 	
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 ////////////////////////////
